All goof after WP standards bulk fix

--- a/src/googledrive-page/scss/style.scss
+++ b/src/googledrive-page/scss/style.scss
@@ -186,6 +186,12 @@
     color: #842029;
 }
 
+.auth-status.checking {
+    background: #fff3cd;
+    border: 1px solid #ffecb5;
+    color: #664d03;
+}
+
 .auth-status-icon {
     font-size: 18px;
 }
